# clyde

./: .gitignore  .otto.yml  2026-04-claude-report.md  CLAUDE.md  Cargo.toml  README.md  build.rs  bump.yml  claude-pricing.yml  claude-report.yml  install.sh
.claude/: settings.json
clyde/: Cargo.toml  build.rs
clyde/src/: bootstrap.rs  cli.rs  doctor.rs  main.rs  tests.rs
clyde/src/bootstrap/: tests.rs
clyde/src/cli/: tests.rs
clyde/src/doctor/: tests.rs
clyde/tests/: collect.rs  export.rs  search.rs  serve.rs
common/: Cargo.toml
common/src/: atomic.rs  config.rs  lib.rs  metrics.rs  scan.rs  since.rs  tools.rs
common/src/atomic/: tests.rs
common/src/config/: tests.rs
common/src/metrics/: tests.rs
common/src/scan/: tests.rs
common/src/since/: tests.rs
common/src/tools/: tests.rs
cost/: Cargo.toml  LICENSE  README.md  build.rs  install.sh  patricks-debug-output.txt
cost/docs/design/: 2026-03-10-claude-cost-usage.md  2026-03-10-statusline-color-schemes-and-ccu-integration.md  2026-03-10-update-pricing.md  2026-03-10-weekly-subcommand.md  2026-03-11-fix-ci-and-release-workflows.md  2026-03-11-fix-update-script-and-install-workflow.md  2026-03-11-logging-log-level-first-run.md  2026-03-11-months-averages-graphs.md  2026-03-11-pricing-fetch-reliability.md  2026-03-11-static-pricing-and-update-script.md  2026-03-11-table-format-and-chart-redesign.md  2026-03-11-tiered-pricing-yesterday-releases.md  2026-04-17-startup-performance.md  2026-04-27-subagent-scanner.md  2026-04-29-claude-pricing-migration.md
cost/src/: cache.rs  cli.rs  config.rs  dates.rs  graph.rs  lib.rs  oracle.rs  output.rs  scanner.rs  statusline.rs  table.rs  tests.rs
cost/src/scanner/: tests.rs
cost/statusline.d/: default  nerdfonts  scottidler
data/: pricing-page.sha256  pricing.json
docs/: session-export-contract.md  shakedown-2026-07-03.md  shakedown-session-resume.md  shakedown-v0.1.0.md  shakedown-v0.12.1.md  shakedown-v0.2.0.md  shakedown-v0.3.0.md
efficiency/: Cargo.toml
efficiency/src/: cli.rs  collect.rs  extract.rs  fold.rs  lib.rs  metrics.rs  narrate.rs  outcome.rs  output.rs  persist.rs  rank.rs  rollup.rs  score.rs  tests.rs
efficiency/src/cli/: tests.rs
efficiency/src/collect/: tests.rs
efficiency/src/extract/: tests.rs
efficiency/src/fold/: tests.rs
efficiency/src/metrics/: tests.rs
efficiency/src/narrate/: tests.rs
efficiency/src/outcome/: tests.rs
efficiency/src/output/: tests.rs
efficiency/src/persist/: tests.rs
efficiency/src/rank/: tests.rs
efficiency/src/rollup/: tests.rs
efficiency/src/score/: tests.rs
klod/: Cargo.toml
klod/src/: cli.rs  main.rs  tests.rs
klod/src/cli/: tests.rs
klod/tests/: serve.rs
permit/: Cargo.toml  README.md  claude-permit.yml  install.sh
permit/.github/workflows/: release-and-publish.yml
permit/docs/design/: 2026-03-24-apply.md  2026-03-24-claude-permit.md
permit/src/: cli.rs  config.rs  filter.rs  lib.rs  main.rs  pager.rs  tests.rs
permit/src/cmd/: apply.rs  audit.rs  check.rs  clean.rs  install.rs  log.rs  mod.rs  report.rs  suggest.rs
permit/src/db/: mod.rs  store.rs
permit/src/hook/: mod.rs  payload.rs
permit/src/risk/: mod.rs  tier.rs
permit/src/settings/: mod.rs  parser.rs
pricing/: CLAUDE.md  Cargo.toml  README.md
pricing/.github/workflows/: pages.yml
pricing/data/: normalization.json  pricing-page.sha256  pricing.json
pricing/docs/: pricing-distribution-options.md
pricing/docs/design/: 2026-04-28-claude-pricing-library.md  2026-06-09-decouple-pricing-data-cadence-implementation-notes.md  2026-06-09-decouple-pricing-data-cadence.md  2026-06-09-split-pricing-data-from-logic.md  2026-06-10-data-driven-model-normalization.md
pricing/src/: error.rs  feed.rs  fetch.rs  lib.rs  parse.rs  pricing.rs
pricing/src/feed/: tests.rs
pricing/src/fetch/: tests.rs
pricing/src/parse/: tests.rs
pricing/src/pricing/: tests.rs
report/: Cargo.toml  README.md
report/.github/workflows/: release.yml
report/docs/: shakedown-v0.1.3.md
report/docs/design/: 2026-04-29-cr-v0.1.2-json-jq-synthesis.md
report/src/: aggregate.rs  cli.rs  config.rs  fmt.rs  lib.rs  merge.rs  outcome.rs  persona.rs  render.rs  report.rs  scan.rs  session.rs  summarize.rs  tests.rs  title.rs  tools.rs
report/src/aggregate/: tests.rs
report/src/cli/: tests.rs
report/src/config/: tests.rs
report/src/fmt/: tests.rs
report/src/merge/: tests.rs
report/src/outcome/: tests.rs
report/src/persona/: tests.rs
report/src/render/: tests.rs
report/src/repo/: tests.rs
report/src/report/: tests.rs
report/src/scan/: tests.rs
report/src/session/: tests.rs
report/src/summarize/: tests.rs
report/src/title/: tests.rs
report/src/tools/: tests.rs
report/templates/: report-html.pmt  report.pmt
report/tests/: collect.rs
session/: Cargo.toml
session/src/: lib.rs  model.rs  parse.rs  paths.rs  redact.rs  scan.rs  scope.rs  stage.rs
session/src/parse/: tests.rs
session/src/paths/: tests.rs
session/src/redact/: tests.rs
session/src/scan/: tests.rs
session/src/scope/: tests.rs
session/src/stage/: tests.rs
sessions/: Cargo.toml
sessions/src/: db.rs  enrich.rs  export.rs  index.rs  lib.rs  llm.rs  mcp.rs  model.rs  since.rs  stage.rs  transcript.rs
sessions/src/db/: catalog.rs  migrate.rs  query.rs  tests.rs
sessions/src/db/catalog/: tests.rs
sessions/src/db/query/: tests.rs
sessions/src/db/tests/: efficiency.rs  files_touched.rs
sessions/src/enrich/: tests.rs
sessions/src/export/: tests.rs
sessions/src/index/: tests.rs
sessions/src/llm/: tests.rs
sessions/src/mcp/: grep.rs  read.rs  tests.rs  tools.rs
sessions/src/mcp/grep/: tests.rs
sessions/src/mcp/read/: tests.rs
sessions/src/since/: tests.rs
sessions/src/stage/: tests.rs
sessions/src/transcript/: tests.rs
sessions/tests/: export.rs
sessions/tests/fixtures/export/: README.md  enriched.json  never-enriched.json  staged-archived.json  with-body.json  with-efficiency.json
src/: average.rs  cache.rs  cli.rs  config.rs  error.rs  feed.rs  fetch.rs  graph.rs  lib.rs  main.rs  output.rs  (+15 more)
(+72 files in other folders)
