[package]
name = "claude-pricing"
version = "0.2.0"
edition = "2024"
authors = ["Scott Idler <scott.idler@tatari.tv>"]
build = "build.rs"
description = "Shared Claude pricing, JSONL parsing, and cost math for Tatari tools"
license = "MIT"
repository = "https://github.com/tatari-tv/claude-pricing"

[lib]
name = "claude_pricing"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
dirs = "6.0.0"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tempfile = { version = "3.13", optional = true }
ureq = { version = "3.3.0", optional = true }

[features]
fetch = ["dep:tempfile", "dep:ureq"]

[dev-dependencies]
mockito = "1.7.2"
tempfile = "3.13"
