[workspace]
members = ["clyde", "session", "sessions", "report", "cost", "permit", "pricing"]
default-members = ["clyde"]
resolver = "3"

[workspace.package]
version = "0.1.2"
edition = "2024"
authors = ["Scott Idler <scott.idler@tatari.tv>"]

[workspace.lints.rust]
dead_code = "deny"
unused_variables = "deny"
