[workspace]
members = ["clyde", "common", "session", "sessions", "report", "cost", "permit", "pricing", "efficiency"]
default-members = ["clyde"]
resolver = "3"

[workspace.package]
version = "0.13.0"
edition = "2024"
authors = ["Scott Idler <scott.idler@tatari.tv>"]

[workspace.lints.rust]
dead_code = "deny"
unused_variables = "deny"

# Reconciled union of the absorbed tools' dependencies. Versions are the highest seen across
# klod/cr/ccu/claude-permit at merge time; feature flags stay per-crate (additive). Crate-unique
# deps (comfy-table, rasciichart, sparklines, include_dir, gethostname, regex, terminal_size,
# wait-timeout, mockito, libc, tokio, tracing-subscriber) stay declared in their own manifests.
[workspace.dependencies]
chrono = "0.4.45"
# wrap_help: detect the terminal width and wrap help to it (pulls in terminal_size). Without it
# clap wraps at a fixed 100 cols, which overflows ugly on narrow terminals. Feature is additive,
# so declaring it here unions with each crate's own (derive/env).
clap = { version = "4.6.1", features = ["wrap_help"] }
colored = "3.1.1"
dirs = "6.0.0"
env_logger = "0.11.10"
eyre = "0.6.12"
log = "0.4.33"
rayon = "1.12.0"
rusqlite = "0.40.1"
serde = "1.0.228"
serde_json = "1.0.150"
serde_yaml = "0.9.34"
tempfile = "3.27.0"
thiserror = "2.0.18"
ureq = "3.3.0"
which = "8.0.2"

# Panic strategy pinned explicitly (unwind is already the default) so a future `panic = "abort"`
# cannot silently turn permit's hook-path `catch_unwind` boundary into a process-abort no-op. See
# docs/design/2026-07-03-deep-dive-remediations.md (Phase 3, hook panic containment).
[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
