[package]
name = "clyde"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Catalog, search, and resume Claude Code sessions"
build = "build.rs"
repository = "https://github.com/tatari-tv/clyde"

[[bin]]
name = "clyde"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
colored = { workspace = true }
common = { path = "../common" }
cost = { path = "../cost" }
dirs = { workspace = true }
env_logger = { workspace = true }
eyre = { workspace = true }
libc = "0.2.186"
log = { workspace = true }
mcp-io = { git = "https://github.com/tatari-tv/mcp-io-rs", tag = "v0.1.2", version = "0.1.2" }
permit = { path = "../permit" }
renew = { git = "https://github.com/tatari-tv/renew", tag = "v0.3.2" }
report = { path = "../report" }
rusqlite = { workspace = true, features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
session = { path = "../session" }
sessions = { path = "../sessions" }
which.workspace = true

[dev-dependencies]
tempfile = { workspace = true }
