[package]
name = "common"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Shared clyde umbrella surface: common CLI globals passed from clyde to each tool"

[lib]
name = "common"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
chrono.workspace = true
dirs.workspace = true
eyre.workspace = true
log.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_yaml.workspace = true
tempfile.workspace = true
wait-timeout = "0.2.1"
