[package]
name = "cost"
version.workspace = true
edition.workspace = true
authors.workspace = true
build = "build.rs"
description = "Fast CLI tool for tracking Claude Code session costs from JSONL logs"

[lib]
name = "cost"
path = "src/lib.rs"

# Compat shim: the standalone `ccu` binary parses the Parser-deriving CostCli wrapper and calls
# cost::run in-process. Behavior-exact with the pre-merge tool; clyde nests CostArgs instead.
[[bin]]
name = "ccu"
path = "src/bin/ccu.rs"

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
claude-pricing = { path = "../pricing", features = ["fetch"] }
comfy-table = "7.1"
clap = { workspace = true, features = ["derive", "env"] }
common = { path = "../common" }
dirs = { workspace = true }
env_logger = { workspace = true }
eyre = { workspace = true }
log = { workspace = true }
rasciichart = "0.2.17"
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sparklines = "0.3.0"
include_dir = "0.7.4"

[dev-dependencies]
tempfile = { workspace = true }
