[package]
name = "efficiency"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Session efficiency & behavior signals mined from Claude Code JSONL session logs"

[lib]
name = "efficiency"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
claude-pricing = { version = "2.0.0", path = "../pricing" }
common = { path = "../common" }
eyre = { workspace = true }
log = { workspace = true }
