[package]
name = "claude-permit"
version = "0.1.20"
edition = "2024"
authors = ["Scott Idler <scott.a.idler@gmail.com>"]
build = "build.rs"
description = "Manage Claude Code permission hygiene - log, audit, suggest, report"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
dirs = "6.0.0"
env_logger = "0.11.10"
eyre = "0.6.12"
log = "0.4.29"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
terminal_size = "0.4.4"
which = "8.0.2"

[build-dependencies]

[dev-dependencies]
tempfile = "3.27.0"
