[package]
name = "permit"
version.workspace = true
edition.workspace = true
authors.workspace = true
build = "build.rs"
description = "Manage Claude Code permission hygiene - log, audit, suggest, report"

[lib]
name = "permit"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
colored = { workspace = true }
common = { path = "../common" }
dirs = { workspace = true }
env_logger = { workspace = true }
eyre = { workspace = true }
log = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
terminal_size = "0.4.4"
which = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
