[package]
name = "report"
version.workspace = true
edition.workspace = true
authors.workspace = true
build = "build.rs"
description = "Read the session catalog and emit a per-host JSON usage report"

[lib]
name = "report"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
claude-pricing = { path = "../pricing", features = ["fetch"] }
colored = { workspace = true }
common = { path = "../common" }
dirs = { workspace = true }
efficiency = { path = "../efficiency" }
env_logger = { workspace = true }
eyre = { workspace = true }
gethostname = "1.1.0"
log = { workspace = true }
rayon = { workspace = true }
regex = "1.12.3"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
session = { path = "../session" }
sessions = { path = "../sessions" }
tempfile = { workspace = true }
thiserror.workspace = true
ureq = { workspace = true, features = ["json"] }
wait-timeout = "0.2.1"
which = { workspace = true }
