[package]
name = "session"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Shared core for klod: locate and parse Claude Code session JSONL transcripts"

[lints]
workspace = true

[dependencies]
chrono = "0.4.45"
dirs = "6.0.0"
eyre = "0.6.12"
log = "0.4.33"
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"
