[package]
name = "sessions"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "clyde navigational layer: index, FTS5, search/ls/open over Claude sessions"

[lints]
workspace = true

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
common = { version = "0.5.0", path = "../common" }
eyre = "0.6.12"
gethostname = "1.1.0"
log = "0.4.33"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "rustls", "http2"] }
rmcp = { version = "1.7.0", features = ["server", "macros"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
session = { version = "0.5.0", path = "../session" }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "io-std", "io-util", "macros", "sync"] }

[dev-dependencies]
tempfile = "3.27.0"
